installed laravel passport

--- a/cyberplus/composer.json
+++ b/cyberplus/composer.json
@@ -12,6 +12,7 @@
         "consoletvs/charts": "6.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/passport": "^9.0",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
